[package]
name = "MultipleChoiceTestSimulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
#clap = { version = "4.5.8", features = ["derive"] }
egui = "0.27.2"
egui_extras = "0.27.2"
log = "0.4.22"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
eframe = "0.27.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.27.2", default-features = false, features = [
    "accesskit",     
    "default_fonts", 
    "glow",
    "persistence",
] }
rand = { version = "0.8.5"}
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen-futures = "0.4"
